--- a/Mygame/Proto.css
+++ b/Mygame/Proto.css
@@ -1,12 +1,20 @@
 /* HPバーのスタイル */   
 .character-area {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;  /* 上下に均等に配置 */
+  width: 150px;
+  height: 200px;                   /* ← 高さちょっと増やす */
   text-align: center;
-  margin-bottom: 5px; /* ↓ 少し縮める */
+  box-sizing: border-box;
+  padding: 8px 0;
 }
 
 .hp-area {
-  margin-top: 2px; /* ↓ 少し縮める */
+  margin-top: 0;                   /* ← ブラウザによってズレるので明示 */
 }
+
 
 .hp-area h2 {
   margin: 2px 0;
@@ -111,18 +119,6 @@ progress::-webkit-progress-value {
 }
 
 
-/* プレイヤー画像を左に配置 */
-#character_kishi_man_03_blue {
-  float: left;
-  margin-right: 20px;
-}
-
-/* 敵画像を右に配置 */
-#yurei_03 {
-  float: right;
-  margin-left: 20px;
-}
-
 /* ページ全体のスタイル */
 body {
   display: flex;
@@ -172,5 +168,15 @@ body {
   box-sizing: border-box;
   text-align: center;
 }
+
+.character-row {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 40px;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
 
 
